--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Repo Finder</title>
     <script src="search.js"></script>
     <link href="styles.css"rel="stylesheet"></script>
 </head>
 <body>
+   
     <div id="app">
+        <h1>Repo Finder</h1>
       <input type="text" id="search">     
     </div>
 </body>
