fixed setTimeout bug, incremental search sometimes odd

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
    
     <div id="app">
         <h1>Repo Finder</h1>
+        <h2 id="warning">You can only make 3 requests per minute</h2>
       <input type="text" id="search">     
     </div>
 </body>
